fixed overflow

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -79,8 +79,9 @@ nav {
 }
 
 @media screen and (max-width: 768px) {
-  body {
+  .wrapper {
     overflow-x: hidden;
+    position: relative;
   }
   .nav-links {
     position: absolute;
